--- a/LeNet.ipynb
+++ b/LeNet.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "VaFj_F95BWTJ"
       },
@@ -70,7 +70,7 @@
         "id": "VuyDbcspGf5L",
         "outputId": "65937080-6337-429f-cdf4-fe61819862fa"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
         "id": "e_JdAbhixJ32",
         "outputId": "24c1a8e0-3aad-4a66-bade-b957e61cbe32"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -152,7 +152,7 @@
         },
         "outputId": "e0b3aa0d-3c00-4b4f-c905-22f46e19d5e7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
         "id": "RkkS7jhowqZI",
         "outputId": "8cbd47ed-6cfb-47f0-b6b9-3177d545c823"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
       "metadata": {
         "id": "YmkmIBPndR0D"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +357,7 @@
         },
         "outputId": "76d4509e-ee58-49b3-fbc3-0a96f5f698ce"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -384,7 +384,7 @@
         },
         "outputId": "29c758cb-b935-4b57-a854-eb65db744c95"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +408,7 @@
         },
         "outputId": "e00cc4d0-3f90-487c-d4e1-0370de24bac0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,17 +424,15 @@
       "source": [
         "import random\n",
         "\n",
-        "def show_test(y_pred, index=0):\n",
-        "  print(\n",
-        "      \"This image most likely is a {} with a {:.2f} percent confidence.\"\n",
-        "      .format(np.argmax(y_pred[index]), 100 * np.max(y_pred[index]))\n",
-        "  )\n",
-        "  print(\"This image is a {}\".format(y_test[index]))\n",
-        "\n",
-        "  plt.figure(figsize=(3,3))\n",
-        "  plt.axis(\"off\")\n",
-        "  plt.imshow(X_test[index])\n",
-        "  plt.gray()\n",
+        "def show_test(y_pred, ran=16, figsize=(10,15)):\n",
+        "  plt.figure(figsize=figsize)\n",
+        "  subplot_ = np.sqrt(ran)\n",
+        "  for i in range(0, ran):\n",
+        "    ax = plt.subplot(subplot_, subplot_, i+1)\n",
+        "    ax.set_title(\"True: {}\\nPred: {}\\nConf: {} %\".format(y_test[i], np.argmax(y_pred[i]), np.max(y_pred[index])))\n",
+        "    plt.axis(\"off\")\n",
+        "    plt.imshow(x_test_norm[i])\n",
+        "    plt.gray()\n",
         "\n",
         "show_test(y_pred, index=random.randint(0, 313))"
       ],
@@ -446,7 +444,7 @@
         },
         "outputId": "b1e97a5d-8efe-497e-d7a0-5bcd5012c197"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
